# yassgy

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: command.rs  html_page.rs  lib.rs  main.rs  static_site.rs
testfiles/dirs/normal/: file1.txt  file2.txt
testfiles/txt/: normal.txt
tests/: integration_test.rs
